--- a/README.html
+++ b/README.html
@@ -199,7 +199,8 @@ $(document).ready(function () {
 <hr />
 <div id="youtube-video" class="section level3">
 <h3>Youtube video</h3>
-<p><a href="https://www.youtube.com/watch?v=sQK3Yr4Sc_k" class="uri">https://www.youtube.com/watch?v=sQK3Yr4Sc_k</a> This video is about <strong>Photosynthesis</strong>. The <del>movie</del> shows the pathways between the <em>light and dark reactions</em> within the <strong>Electron Transport Chain</strong> ***</p>
+<p><a href="https://www.youtube.com/watch?v=sQK3Yr4Sc_k" class="uri">https://www.youtube.com/watch?v=sQK3Yr4Sc_k</a></p>
+<p>This video is about <strong>Photosynthesis</strong>. The <del>movie</del> shows the pathways between the <em>light and dark reactions</em> within the <strong>Electron Transport Chain</strong> ***</p>
 </div>
 <div id="top-three-breakfast-foods" class="section level3">
 <h3>Top Three Breakfast Foods</h3>
